# P_app

./: README.md  pyproject.toml
p_app/: hooks.py  modules.txt
p_app/adra_p_app/doctype/exit_permission/: exit_permission.js  exit_permission.json  exit_permission.py  test_exit_permission.py
p_app/adra_p_app/doctype/items/: items.js  items.json  items.py  test_items.py
p_app/adra_p_app/doctype/return_permesion/: return_permesion.js  return_permesion.json  return_permesion.py  test_return_permesion.py
p_app/adra_p_app/doctype/return_tracker/: return_tracker.js  return_tracker.json  return_tracker.py  test_return_tracker.py
p_app/adra_p_app/doctype/target_destination/: target_destination.js  target_destination.json  target_destination.py  test_target_destination.py
p_app/adra_p_app/doctype/td/: td.js  td.json  td.py  test_td.py
p_app/config/: __init__.py
p_app/fixtures/: custom_field.json
